--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,21 @@
+:root {
+  /* Colors */
+  --background-color: #333;
+  --accent-color: #007f5f;
+  --text-color: #fff;
+  /* Box shadows */
+  --box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  --border-radius: 10px;
+  /* Fonts */
+  --font-size-large: 48px;
+  --font-size-medium: 28px;
+  --font-size-extra-large: 54px;
+  --font-size-small: 24px;
+  --font-weight-bold: bold;
+  /* Spacing */
+  --letter-spacing: 3px;
+}
+
 body {
   font-family: 'Montserrat', sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
@@ -6,27 +24,31 @@ body {
 
 .header {
   text-align: center;
-  background: linear-gradient(to bottom, #333, #007f5f);
-  color: #fff;
+  background: linear-gradient(
+    to bottom,
+    var(--background-color),
+    var(--accent-color)
+  );
+  color: var(--text-color);
   padding: 20px;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
 }
 
 .header__profile-pic {
   height: 400px;
   width: 400px;
   border-radius: 50%;
-  border: 5px solid #fff;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  border: 5px solid var(--text-color);
+  box-shadow: var(--box-shadow);
 }
 
 .header__title {
-  font-size: 48px;
-  font-weight: bold;
+  font-size: var(--font-size-large);
+  font-weight: var(--font-weight-bold);
 }
 
 .header__bio {
-  font-size: 28px;
+  font-size: var(--font-size-medium);
 }
 
 .repositories {
@@ -35,16 +57,16 @@ body {
 
 .repositories__title {
   text-align: center;
-  font-size: 54px;
-  margin-bottom: 50px;
-  letter-spacing: 3px;
+  font-size: var(--font-size-extra-large);
+  margin-bottom: var(--spacing-large);
+  letter-spacing: var(--letter-spacing);
 }
 
 .repositories__list {
   list-style: none;
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
@@ -54,20 +76,24 @@ body {
   padding: 20px;
   height: 250px;
   width: 75%;
-  background: linear-gradient(to bottom, #333, #007f5f);
+  background: linear-gradient(
+    to bottom,
+    var(--background-color),
+    var(--accent-color)
+  );
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 6px 12px rgba(0, 0, 0, 0.2);
-  border-radius: 10px;
-  color: #fff;
+  border-radius: var(--border-radius);
+  color: var(--text-color);
   text-align: center;
   justify-self: center;
-  font-size: 35px;
+  font-size: var(--font-size-medium);
   display: flex;
   flex-direction: column;
   transition: all 0.5s;
 }
 
 .repositories__item:hover {
-  background-color: #333;
+  background-color: var(--background-color);
   transform: scale(1.05);
   transition: background-color 0.3s, transform 0.3s;
 }
@@ -79,9 +105,9 @@ body {
 
 .repositories__link {
   text-decoration: none;
-  color: #fff;
-  font-size: 35px;
-  font-weight: bold;
+  color: var(--text-color);
+  font-size: var(--font-size-medium);
+  font-weight: var(--font-weight-bold);
   transition: color 0.3s ease;
 }
 
@@ -92,16 +118,20 @@ body {
 }
 
 .footer {
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   text-align: center;
-  background: linear-gradient(to top, #333, #007f5f);
-  color: #fff;
+  background: linear-gradient(
+    to top,
+    var(--background-color),
+    var(--accent-color)
+  );
+  color: var(--text-color);
   padding: 10px;
-  font-size: 24px;
+  font-size: ar(--font-size-small);
   box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1), 0 -6px 12px rgba(0, 0, 0, 0.2);
 }
 
 .footer__copyright {
-  font-size: 28px;
+  font-size: var(--font-size-medium);
   margin-top: 10px;
 }
